values/ingress/ingress-kibana.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
 name: kibana-ingress
 namespace: monitoring
spec:
    rules:
        - host: kibana.dcc-pando.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: kibana-logging
                            port:
                                number: 5601
    tls:
        - hosts:
              - kibana.dcc-pando.local
          secretName: kibana-tls
